drupal/sites/all/themes/chunkpart/css/style.css
/* ... */
/* Article inline content */

.node-type-article .inline-content {
	margin: 0 1em 0 0;
	display: table;
	width: 1px;
	float: left;
	clear: left;
}

.node-type-article .inline-content a {
	color: #000;
}

.node-type-article #article-body .inline-content a:hover {
	text-decoration: none;
	color: #28a9e9;
}

.node-type-article .inline-content p {
	margin: 3px 0 10px 0;
	padding-top: 10px;
	border-top: 1px solid #e8e8e8;
}

.node-type-article .inline-content img {
	display: block;
	margin-bottom: 5px;
}

.node-type-article .inline-content span {
	display: block;
	font-weight: bold;
	font-size: 15px;
}

.node-type-article .inline-content.horizontal {
	display: inline-block; *display: inline; zoom: 1;
	vertical-align: bottom;
	width: auto;
	float: none;
	margin-right: 0;
	border-top: 1px solid #e8e8e8;
}

.node-type-article .inline-content.horizontal p {
	float: left;
	display: table;
	float: left;
	width: 1px;
	margin: 0 5px 1em 0;
	border-top: none;
}

.node-type-article .inline-content.horizontal p.last-child {
	margin-right: 0;
}

.node-type-article .inline-content.horizontal span {
	padding: 0 10px 0 0;
}

/* Author */

.node-type-article #article-author {
	z-index: 1;
    transition: opacity 0.2s ease-in-out;
    opacity: 1;
}

.node-type-article #article-author.below {
	position: absolute !important;
	left: 0 !important;
	opacity: 0;
}

.node-type-article #article-author.above {
    position: absolute !important;
    left: 0 !important;
    top: 0 !important;
    z-index: 1;
}

.node-type-article #article-author .inner {
	border: 1px solid #dadada;
	padding: .75em .5em 0 .5em;
	margin-top: 20px;
	background: #f1f3f4;
	line-height: 1.5;

	-webkit-box-shadow: 0px 1px 2px rgba(50, 50, 50, 0.2);
	box-shadow:         0px 1px 2px rgba(50, 50, 50, 0.2);
}

.node-type-article #article-author.inside .inner {
	margin-top: 1em;
}

.node-type-article .below #article-author {
	opacity: 0;
}

.node-type-article #article-author .image {
	text-align: center;
}

.node-type-article #article-author .headline {
	font-size: 14px;
	font-weight: bold;
}

.node-type-article #article-author .full_bio_link a {
	font-weight: bold;
}

.node-type-article #article-author .full_bio_link a:hover {
}

.node-type-article #article-author .body {
	font-size: 11px;
	margin-bottom: 1em;
}

.node-type-article #article-body {
	margin-bottom: 1.5em;
}

.node-type-article #article-body .content {
	font-size: 14px;
	color: #333;
}

.node-type-article #article-body div,
.node-type-article #article-body iframe {
	max-width: 100% !important;
}

.node-type-article #article-author .follow_headline {
	font-size: 12px;
	font-weight: bold;
	text-align: center;
	color: #555;
}

.node-type-article #article-author .follow {
	font-size: 14px;
	margin-bottom: 1em;
	text-align: center;
}

.node-type-article #article-author .follow li {
	display: inline;
}

.node-type-article #article-author .follow li a {
	display: inline-block;
	width: 21px;
	height: 21px;
	text-indent: 100%;
	overflow: hidden;
	white-space: nowrap;
	line-height: 21px;
	background-repeat: no-repeat;
}

.node-type-article #article-author .follow .twitter a {
	background-image: url(../images/author_twitter.png); /** sprite-ref: mysprite; */
}

.node-type-article #article-author .follow .google a {
	background-image: url(../images/author_google.png); /** sprite-ref: mysprite; */
}

/* Footer */

.node-type-article #article-footer {
	clear: both;
}

/* Gallery Page
------------------------------------------------------------ */

.node-type-openpublish-photo-gallery .show_gallery #gallery-cover,
.node-type-openpublish-photo-gallery .show_gallery #gallery-description {
	display: none;
}

.node-type-openpublish-photo-gallery .hide_gallery #related-galleries,
.node-type-openpublish-photo-gallery .hide_gallery #gallery-photos {
	display: none;
}

.node-type-openpublish-photo-gallery .show_gallery #gallery-related {
	padding-left: 0;
	margin-top: 50px
}

.node-type-openpublish-photo-gallery #gallery-body .drupal-embed {
	display: none;
}

/*.js .node-type-openpublish-photo-gallery #gallery-photos #gallery-content li {
	display: none;
}

.js .node-type-openpublish-photo-gallery #gallery-photos #gallery-content li.slide1 {
	display: block;
}
*/
.node-type-openpublish-photo-gallery #gallery-header {
	display: inline-block; *display: inline; zoom: 1;
	width: 100%;
}

.node-type-openpublish-photo-gallery #gallery-header-main {
	width: 31em;
	float: left;
}

.node-type-openpublish-photo-gallery #gallery-content .image {
}

.node-type-openpublish-photo-gallery #gallery-content .image img {
	;
}

.node-type-openpublish-photo-gallery #gallery-content .photo-caption {
	width: 16em;
	float: right;
	padding: 1em;
	white-space: normal;
	line-height: 1.5;
	background: #f6f8f9;
	border: 1px solid #e5e5e5;
	border-left: none;
	max-height: 465px;
	overflow: auto;

	-webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
	-moz-box-shadow:    0px 1px 3px rgba(0, 0, 0, 0.12);
	box-shadow:         0px 1px 3px rgba(0, 0, 0, 0.12);
}

.node-type-openpublish-photo-gallery #gallery-content .photo-caption .caption h2 {
	font-size: 18px;
	color: #333;
	font-weight: bold;
	margin: 0 0 5px 0;
}

.node-type-openpublish-photo-gallery #gallery-content .caption {
	font-size: 15px;
	color: #333;
}

.node-type-openpublish-photo-gallery #gallery-photos #gallery-content {
	margin-bottom: 1em;
}

.node-type-openpublish-photo-gallery #gallery-photos .image,
.node-type-openpublish-photo-gallery #gallery-cover .image,
.node-type-openpublish-photo-gallery #gallery-photos .gallery-slide .image,
.node-type-openpublish-photo-gallery #gallery-photos .image-area {
	float: left;
	line-height: 465px;
	height: 465px;
	background: #000;
	width: 620px;
	text-align: center;
}

.node-type-openpublish-photo-gallery #gallery-photos .gallery-slide img,
.node-type-openpublish-photo-gallery #gallery-photos .image-area-inner {
	position: relative;
	display: inline-block;
	vertical-align: middle;
}
/* ... */

